# phase-3-heckathon-2-q4

./: .gitignore
.specify/memory/: constitution.md
backend/: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
backend/src/: database.py  main.py
backend/src/agents/: todo_agent.py
backend/src/api/: main.py
backend/src/mcp/: server.py  tools.py  utils.py
backend/src/models/: entities.py  neon.py  sql_task.py  task.py
backend/src/services/: auth.py  history.py  task_manager.py
backend/src/ui/: cli.py
backend/src/utils/: validators.py
backend/tests/integration/: test_cli_flow.py
backend/tests/unit/: test_task_manager.py
frontend/: package-lock.json  package.json
frontend/app/: page.tsx
history/prompts/001-todo-ai-chatbot/: 002-create-todo-ai-chatbot-specification.spec.prompt.md  003-generate-implementation-plan.plan.prompt.md  004-decompose-todo-ai-chatbot-plan-into-tasks.tasks.prompt.md  005-implement-phase-iii-todo-ai-chatbot.green.prompt.md  006-fix-backend-and-build-frontend.green.prompt.md  007-check-backend-status.misc.prompt.md  008-run-frontend-development-server.green.prompt.md  009-prepare-and-push-for-vercel-deployment.green.prompt.md  010-run-frontend-production-build.green.prompt.md  011-resolve-react-19-peer-dependency-conflict.green.prompt.md
history/prompts/constitution/: 001-initialize-project-constitution.constitution.prompt.md
specs/001-todo-ai-chatbot/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-todo-ai-chatbot/checklists/: requirements.md
(+1 files in other folders)
