[project]
name = "todo-backend"
version = "0.1.0"
description = "FastAPI backend for Todo app"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "sqlalchemy",
    "sqlmodel",
    "openai",
    "mcp",
    "python-dotenv",
    "pytest"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
